--- a/client/jade/volunteers.jade
+++ b/client/jade/volunteers.jade
@@ -1,3 +1,33 @@
-//
-   Created by paul on 4/14/2016.
+doctype html
+html(lang=en ng-app=app)
+    head
+        title volunteers
+        include headDependencies
+    body(ng-controller=ctrl)
+        include navbar
+        .fluid-container
+            .row
+                .col-md-8.col-md-offset-2
+                    h1 Elders
+                    table.table.table-striped
+                        thead
+                            tr
+                                th name
+                                th
+                                th
+                        tbody
+                            tr(ng-repeat='elder in elders track by $index')
+                                td
+                                    input.form-control(type='text', ng-model='elders[$index].name')
+                                td
+                                    button.btn.btn-warning(type='button', ng-click='update($index)') Save
+                                td
+                                    button.btn.btn-danger(type='button', ng-click='delete($index)') Delete
+                            tr
+                                td
+                                    input.form-control(type='text', ng-model='name')
+                                td
+                                    button.btn.btn-primary(type='button', ng-click='post()') Add
 
+    include bodyDependencies
+    script(src='../js/volunteerctrl.js')
