--- a/client/jade/headDependencies.jade
+++ b/client/jade/headDependencies.jade
@@ -1,3 +1,4 @@
-//
-   Created by paul on 4/13/2016.
-
+link(rel='shortcut icon', type='image/png', href='/calendar.png')
+link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css', rel='stylesheet')
+link(rel='stylesheet', href='../css/custom.css')
+script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js')
