added 404 page and beginning to work on the crud of the other pages probably done fast

--- a/client/jade/navbar.jade
+++ b/client/jade/navbar.jade
@@ -2,8 +2,8 @@ nav.navbar.navbar-default
     .container-fluid
         ul.nav.navbar-nav
             li
-                a(href='/') elders
+                a(href='/elders') elders
             li
-                a(href='requests') requests
+                a(href='/requests') requests
             li
-                a(href='volunteers') volunteers
+                a(href='/volunteers') volunteers
