--- a/client/jade/requests.jade
+++ b/client/jade/requests.jade
@@ -8,7 +8,7 @@ html(lang=en ng-app='app')
         .fluid-container
             .row
                 .col-md-8.col-md-offset-2
-                    h1 Transport
+                    h1 Requests
                     table.table.table-striped
                         thead
                             tr
