--- a/client/jade/volunteers.jade
+++ b/client/jade/volunteers.jade
@@ -1,9 +1,9 @@
 doctype html
-html(lang=en ng-app=app)
+html(lang=en ng-app='app')
     head
         title volunteers
         include headDependencies
-    body(ng-controller=ctrl)
+    body(ng-controller='ctrl')
         include navbar
         .fluid-container
             .row
