added extra fields and added widgets but need to find out about some details prio 1 is refactoring  deciding about expanding api  and implementing the new database

--- a/client/jade/elders.jade
+++ b/client/jade/elders.jade
@@ -14,8 +14,12 @@ html(lang='en' ng-app='app')
                             tr
                                 th name
                                 th location
-                                th
-                                th
+                                th postcode
+                                th city
+                                th telephone
+                                th mobile
+                                th note
+                                th movement_aid
                         tbody
                             tr(ng-repeat='elder in elders track by $index')
                                 td
