--- a/client/jade/volunteers.jade
+++ b/client/jade/volunteers.jade
@@ -13,8 +13,13 @@ html(lang=en ng-app='app')
                         thead
                             tr
                                 th name
-                                th
-                                th
+                                th mon
+                                th tue
+                                th wed
+                                th thu
+                                th fri
+                                th sat
+                                th sun
                         tbody
                             tr(ng-repeat='volunteer in volunteers track by $index')
                                 td
