boel dingen gedaan widgets met directives meer widgets meer realistische database
requestcontroller eleganter maken
bug met tijd bij update

--- a/client/jade/bodyDependencies.jade
+++ b/client/jade/bodyDependencies.jade
@@ -1,6 +1,12 @@
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
 script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
-script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js')
-script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js')
+
+//widgets
 script(src='../lib/bootstrap-datetimepicker.min.js')
+script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js" type="text/javascript")
+
+//angular and modules
+script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.8/angular-strap.min.js')
